# ppatch-rs

./: .env_template  .gitignore  Cargo.toml  README.md
build_utils/: Cargo.toml
build_utils/src/: lib.rs  paramdex_fetch.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  paramdex_fetch.rs
field_metadata/: Cargo.toml
field_metadata/src/: lib.rs
paramdex/: Cargo.toml
paramdex/src/: enums.rs  lib.rs  meta.rs  paramdef.rs
ppatch/: Cargo.toml  build.rs
ppatch/benches/: row_patchers.rs
ppatch/src/: celua.rs  lib.rs  static.rs  vtable.rs
ppatch/src/from/: allocator.rs  mod.rs  regulation_man.rs  resource.rs  string.rs  vector.rs
ppatch/src/patchers/: base.rs  linked_list.rs  mod.rs  sparse_array.rs
ppatch/src/util/: mod.rs
shared/: Cargo.toml
src/: lib.rs  param_file.rs  vtable.rs
src/from/: allocator.rs  component.rs  regulation_man.rs  resource.rs  string.rs  vector.rs
src/patchers/: mod.rs  sparse_array.rs
src/util/: unaligned.rs
