[package]
name = "ppatch-rs"
version = "0.1.0"
edition = "2021"
authors = ["tremwil@gmail.com"]

[lib]
crate-type = ["dylib"]

[dependencies]
widestring = "1.1.0"
fmt-derive = "0.1.2"

[features]
default = ["er"]
ds3 = []
er = []
ac6 = []

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
debug-assertions = false
overflow-checks = false