[package]
name = "ppatch"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
widestring = "1.1.0"
fmt-derive = "0.1.2"
fnv = "1.0.7"
num-traits = "0.2.19"
shared = { path = "../shared" }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5"

[build-dependencies]
build_utils = { path = "../build_utils" }

[features]
er = []
ds3 = []
ac6 = []
default = [ "er" ]

[[bench]]
name = "row_patchers"
harness = false