[package]
name = "ppatch"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
field_metadata = { path = "../field_metadata" }
widestring = "1.1.0"
fmt-derive = "0.1.2"
fnv = "1.0.7"
num-traits = "0.2.19"
lazy_static = "1.5"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5"

[build-dependencies]
field_metadata = { path = "../field_metadata" }
paramdex = { path = "../paramdex" }

log = "0.4.2"
simple-log = "1.6"

[features]
er = []
ds3 = []
ac6 = []
default = [ "er" ]

[[bench]]
name = "row_patchers"
harness = false